syntax = "proto3";

package com.lastmile.driver.proto;

import "google/api/annotations.proto";
import "google/api/http.proto";          
import "google/protobuf/empty.proto";    

option java_multiple_files = true;
option java_package = "com.lastmile.driver.proto";
option java_outer_classname = "DriverProto";

service DriverService {
  rpc RegisterRoute(RegisterRouteRequest) returns (RegisterRouteResponse){
    option (google.api.http) = {
      post: "/driver/register-route"
      body: "*"
    };
  };
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse){
    option (google.api.http) = {
      post: "/driver/{driver_id}/location"
      body: "*"
    };
  };
  rpc GetDriverInfo(GetDriverInfoRequest) returns (GetDriverInfoResponse){
    option (google.api.http) = {
      get: "/driver/{driver_id}"
    };
  };
  rpc ListDrivers(ListDriversRequest) returns (ListDriversResponse);
  
  rpc GetDriverDashboard(GetDriverDashboardRequest) returns (GetDriverDashboardResponse) {
    option (google.api.http) = { 
      get: "/driver/dashboard/{driver_id}" 
    };
  };

  // Add a trip to driver's active list (Internal use by Trip/Matching service)
  rpc AddTrip(AddTripRequest) returns (AddTripResponse);

  // Driver rates rider after trip completion
  rpc RateRider(RateRiderRequest) returns (RateRiderResponse) {
    option (google.api.http) = { 
      post: "/driver/{driver_id}/rate-rider" body: "*" 
    };
  };
}

message RegisterRouteRequest {
  string driver_id = 1;
  string destination = 2;
  int32 available_seats = 3;
  repeated string metro_stations = 4;
}

message RegisterRouteResponse {
  string route_id = 1;
  bool success = 2;
  string message = 3;
}

message UpdateLocationRequest {
  string driver_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message UpdateLocationResponse {
  bool success = 1;
  string message = 2;
}


message GetDriverInfoRequest {
  string driver_id = 1;
}

message GetDriverInfoResponse {
  string driver_id = 1;
  string destination = 2;
  int32 available_seats = 3;
  repeated string metro_stations = 4;
  Location current_location = 5;
  bool success = 6;
  double rating = 7;
}

message ListDriversRequest {
  string station = 1;
}

message DriverInfo {
  string driver_id = 1;
  string destination = 2;
  int32 available_seats = 3;
  repeated string metro_stations = 4;
  Location current_location = 5;
  double rating = 6;
}

message ListDriversResponse {
  repeated DriverInfo drivers = 1;
  bool success = 2;
}

// Trip information currently active or scheduled
message TripInfo {
  string trip_id = 1;
  string rider_name = 2;
  double rider_rating = 3; // snapshot of rider rating
  string pickup_station = 4;
  string destination = 5;
  string status = 6; // scheduled | active | completed
  int32 fare = 7;
  int64 pickup_timestamp = 8; // epoch ms
  string rider_id = 9;
}

// Completed ride history item
message RideHistoryItem {
  string trip_id = 1;
  string date = 2; // YYYY-MM-DD
  string rider_name = 3;
  string destination = 4;
  int32 fare = 5;
  int32 rating_given = 6; // driver -> rider rating 1-5
  int64 pickup_timestamp = 7;
  int64 dropoff_timestamp = 8;
}

message GetDriverDashboardRequest { 
  string driver_id = 1; 
}

message GetDriverDashboardResponse {
  bool success = 1;
  string driver_id = 2;
  double driver_rating = 3;
  int32 total_earnings = 4;
  int32 today_earnings = 5;
  int32 yesterday_earnings = 6;
  repeated TripInfo active_trips = 7;
  repeated RideHistoryItem ride_history = 8;
  string destination = 10;
  int32 available_seats = 11;
  repeated string metro_stations = 12;
  Location current_location = 13;
}

message AddTripRequest {
  string driver_id = 1;
  string trip_id = 2;
  string rider_name = 3;
  double rider_rating = 4;
  string pickup_station = 5;
  string destination = 6;
  string status = 7;
  int32 fare = 8;
  int64 pickup_timestamp = 9;
  string rider_id = 10;
}

message AddTripResponse {
  bool success = 1;
  string message = 2;
}

message RateRiderRequest {
  string driver_id = 1;
  string trip_id = 2;
  int32 rating = 3; // 1-5
  string feedback = 4; // optional future use
}

message RateRiderResponse {
  bool success = 1;
  string message = 2;
}

message Location {
  double latitude = 1;
  double longitude = 2;
  int64 timestamp = 3;
}

